--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,79 +1,80 @@
-.nav-bar {
-  position: sticky;
-  top: 0;
-  background: #0d1b2a;
-  height: 125px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-  z-index: 1000;
-}
+  .nav-bar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background: #0d1b2a;
+    height: 125px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    z-index: 1000;
+  }
 
-.nav-bar .logo {
-  font-size: 20px;
-  color: #dbdbdb;
-  white-space: nowrap;
-  flex: 1;
-}
+  .nav-bar .logo {
+    font-size: 20px;
+    color: #dbdbdb;
+    white-space: nowrap;
+    flex: 1;
+  }
 
-.nav-links {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-}
-
-.nav-link{
-  color: #dbdbdb;
-  text-decoration: none;
-  padding-left: 20px;
-  font-size: 20px;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #b7cce1;
-}
-
-.hamburger-icon {
-  display: none;
-  font-size: 30px;
-  color: #dbdbdb;
-  cursor: pointer;
-  flex: 0; /* Make sure it doesn’t grow to take more space */
-}
-
-/* Mobile navigation styles */
-@media (max-width: 1000px) {
   .nav-links {
-    display: none;
+    display: flex;
+    gap: 20px;
+    list-style: none;
+  }
+
+  .nav-link{
+    color: #dbdbdb;
+    text-decoration: none;
+    padding-left: 20px;
+    font-size: 20px;
+  }
+
+  .nav-link:hover,
+  .nav-link:focus {
+    color: #b7cce1;
   }
 
   .hamburger-icon {
-    display: block;
-    padding-left: 10px;
-    font-size: 30px; /* Size the icon appropriately for mobile */
-  }
-
-  .nav-links-mobile {
-    display: flex;
-    opacity: 0.95;
-    flex-direction: column;
-    position: absolute;
-    top: 125px;
-    left: 0;
-    width: 100%;
-    background-color: #0d1b2a;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .nav-link {
-    text-align: center;
-    padding: 8px;
+    display: none;
+    font-size: 30px;
     color: #dbdbdb;
-    font-size: 20px;
-    text-decoration: none;
+    cursor: pointer;
+    flex: 0; /* Make sure it doesn’t grow to take more space */
   }
-}
+
+  /* Mobile navigation styles */
+  @media (max-width: 1000px) {
+    .nav-links {
+      display: none;
+    }
+
+    .hamburger-icon {
+      display: block;
+      padding-left: 10px;
+      font-size: 30px; /* Size the icon appropriately for mobile */
+    }
+
+    .nav-links-mobile {
+      display: flex;
+      opacity: 0.95;
+      flex-direction: column;
+      position: absolute;
+      top: 125px;
+      left: 0;
+      width: 100%;
+      background-color: #0d1b2a;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .nav-link {
+      text-align: center;
+      padding: 8px;
+      color: #dbdbdb;
+      font-size: 20px;
+      text-decoration: none;
+    }
+  }
